; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_ead-client.c_handle_cmd_data.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_ead-client.c_handle_cmd_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ead_msg_cmd_data = type { i32, i32 }

@msg = common dso_local global i32 0, align 4
@cmd_data = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @handle_cmd_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_cmd_data() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.ead_msg_cmd_data*, align 8
  %3 = alloca i32, align 4
  %4 = load i32, i32* @msg, align 4
  %5 = load i32, i32* @cmd_data, align 4
  %6 = call %struct.ead_msg_cmd_data* @EAD_ENC_DATA(i32 %4, i32 %5)
  store %struct.ead_msg_cmd_data* %6, %struct.ead_msg_cmd_data** %2, align 8
  %7 = load i32, i32* @msg, align 4
  %8 = call i32 @ead_decrypt_message(i32 %7)
  %9 = sext i32 %8 to i64
  %10 = sub i64 %9, 8
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %32

15:                                               ; preds = %0
  %16 = load i32, i32* %3, align 4
  %17 = icmp sgt i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %15
  %19 = load %struct.ead_msg_cmd_data*, %struct.ead_msg_cmd_data** %2, align 8
  %20 = getelementptr inbounds %struct.ead_msg_cmd_data, %struct.ead_msg_cmd_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @write(i32 1, i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %15
  %25 = load %struct.ead_msg_cmd_data*, %struct.ead_msg_cmd_data** %2, align 8
  %26 = getelementptr inbounds %struct.ead_msg_cmd_data, %struct.ead_msg_cmd_data* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = xor i1 %29, true
  %31 = zext i1 %30 to i32
  store i32 %31, i32* %1, align 4
  br label %32

32:                                               ; preds = %24, %14
  %33 = load i32, i32* %1, align 4
  ret i32 %33
}

declare dso_local %struct.ead_msg_cmd_data* @EAD_ENC_DATA(i32, i32) #1

declare dso_local i32 @ead_decrypt_message(i32) #1

declare dso_local i32 @write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
